# evalci

./: .gitignore  .zenodo.json  CITATION.cff  README.md  pyproject.toml
.github/workflows/: tests.yml
paper/: main.bbl  main.tex  references.bib
paper/figures/: adjacent_rank_gaps.csv  all_pairwise_comparisons.csv
paper/scripts/: leaderboard_case_study.py  make_figure.py
src/evalci/: __init__.py  _correction.py  _intervals.py  _power.py  _significance.py  cli.py  report.py  schema.py  stats.py
src/evalci/adapters/: __init__.py  csv.py  helm.py  lm_eval_harness.py
tests/: test_adapters.py  test_cli.py  test_correction.py  test_intervals.py  test_power.py  test_report.py  test_schema.py  test_significance.py  test_stats_api.py
