[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evalci"
version = "0.1.0"
description = "Statistical significance & confidence intervals for LLM evals"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
]

[project.optional-dependencies]
test = ["pytest", "statsmodels"]

[project.scripts]
evalci = "evalci.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
